# moveFilesService-rs

./: .gitignore  Cargo.toml  README.md  build.rs  config.ini  movefiles-config.toml  prep.bat
src/: .util.rs.swp  config.rs  logger.rs  logging.rs  main.rs  movefiles.rs  parse_config.rs  time_utils.rs  util.rs
src/default-configs/: default-conf-linux.ini  default-conf-macos.ini  default-conf-windows.ini
