[package]
name = "MoveFilesFolders"
version = "1.0.4"
edition = "2021"
build = "build.rs"

# metadata for exe
[package.metadata.winresource]
FileDescription = "move files and folders from location A to B"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
colored = "2.0.0"
fs_extra = "1.3.0"
walkdir = "2"
toml = "0.7.3"
serde = { version = "1.0.160", features = ["derive"] }

[build-dependencies]
winresource = "0.1.14"
