[package]
name = "MoveFilesFolders"
description = "move files and folders from location A to B"
version = "1.0.6"
edition = "2021"
build = "build.rs"

# metadata for exe
[package.metadata.winresource]
OriginalFilename = "MoveFilesFolders.exe"
LegalCopyright  = "© Kian Heitkamp 2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
colored = "2.0.0"
fs_extra = "1.3.0"
walkdir = "2"
toml = "0.7.3"
serde = { version = "1.0.160", features = ["derive"] }

[build-dependencies]
winresource = "0.1.14"
